[package]
name = "htp"
authors = ["ivanr = Ivan Ristic <ivanr@webkreator.com>", "cccs = Canadian Centre for Cyber Security"]
version = "2.0.0"
publish = false
edition = "2018"
autobins = false
license-file = "LICENSE"
description = "Security Aware HTP Protocol parsing library"
readme = "README.md"
repository = "https://github.com/CybercentreCanada/libhtp-rs-internal"
homepage = "https://github.com/CybercentreCanada/libhtp-rs-internal"
keywords = ["parser", "HTTP", "protocol", "network", "api"]
categories = ["parsing", "network-programming"]
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/**/*.rs",
    "cbindgen.toml",
]

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
base64 = "0.22.1"
bstr = "1.6.0"
libc = "0.2"
nom = "7.1.1"
lzma-rs = { version = "0.2.0", features = ["stream"] }
flate2 = { version = "~1.0.35", features = ["zlib-default"], default-features = false }
lazy_static = "1.4.0"
time = "=0.3.36"

[dev-dependencies]
rstest = "0.17.0"

[build-dependencies]
cdylib-link-lines = "0.1.5"
